# bottec_project

./: .docker_env  .env_docker copy  .env_docker_example  .env_example  .gitmodules  README.md  docker-compose.yaml  pyproject.toml
