[tool.poetry]
name = "bottec_project"
version = "0.1.0"
description = ""
authors = ["SowaSova <cei4bio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
asyncpg = "^0.30.0"
aiogram = "^3.14.0"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.10"
pillow = "^11.0.0"
django-storages = "^1.14.4"
boto3 = "^1.35.55"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
